--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <!-- Main -->
     <main class="main">
+        <button id='burger'>☰</button>
         <div class="before">
             <!-- event types list -->
             <div class=types_container>
@@ -85,6 +86,7 @@
     <script src='assets/js/calendar.js'></script>
     <script src='assets/js/events.js'></script>
     <script src='assets/js/help.js'></script>
+    <script src='assets/js/hamburger.js'></script>
 </body>
 
 </html>
