--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="main">
         <button id='burger'>☰</button>
         <!-- Menu -->
-        <section class="menu menu--gray">
+        <section class="menu menu--gray" id="menu-to-hide">
 
             <h1 class="menu__title">Js Calendar</h1>
 
