--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
         </section>
 
         <!-- Events -->
-        <section class="events"></section><!-- Events -->
-
+        <section class="events"><!-- Events -->
+         <h1>TEST TEXT</h1>
+        </section>
     </main><!-- Main -->
 
     <!-- Modal -->
@@ -127,6 +128,7 @@
     <script src='assets/js/events.js'></script>
     <script src='assets/js/help.js'></script>
     <script src='assets/js/hamburger.js'></script>
+    <script src='assets\js\hidevent.js'></script>
 </body>
 
 </html>
